--- a/.github/workflows/farm.yml
+++ b/.github/workflows/farm.yml
@@ -30,7 +30,7 @@ jobs:
           if [ -n "$(git status --porcelain)" ]; then
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add dist/farm.svg
+            git add dist/farm.svg dist/stats.svg dist/stacks.svg
             git commit -m "Update contribution farm"
             git push
           else
