--- a/.github/workflows/farm.yml
+++ b/.github/workflows/farm.yml
@@ -2,7 +2,7 @@ name: Build Contribution Farm
 
 on:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 * * * *"
   workflow_dispatch:
 
 permissions:
